--- a/src/global.css
+++ b/src/global.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root { 
     --white: #fff;
     --gray-100: #e1e1e6;
@@ -8,7 +12,13 @@
     --gray-800: #202024;
     --gray-900: #121214;
 
+    --green-300: #00B37E;
     --green-500: #00875f;
+}
+
+:focus { 
+    outline: transparent;
+    box-shadow: 0 0 2px var(--green-500);
 }
 
 * { 
