--- a/src/components/Post.module.css
+++ b/src/components/Post.module.css
@@ -99,15 +99,6 @@
   gap: 1rem;
 }
 
-.author img { 
-  width: calc(3rem + 12px);
-  height: calc(3rem + 12px);
-  border-radius: 8px;
-  border: 4px solid var(--gray-800);
-
-  outline: 2px solid var(--green-500);
-}
-
 .authorInfo { 
   display: flex;
   flex-direction: column;
@@ -124,4 +115,8 @@
   font-size: 0.875rem;
   color: var(--gray-400);
   line-height: 1.6;
+}
+
+.commentList { 
+  margin-top: 2rem;
 }
